--- a/src/XelsDesktopWalletApp/Views/Pages/CreateWalletPage.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/CreateWalletPage.xaml
@@ -8,48 +8,93 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="CreateWalletPage">
 
-    <!--<StackPanel Background="White">       
 
+
+    <StackPanel Background="White" Margin="20 15">
+      
         <Border Margin="20 5">
-            <TextBlock Margin="0,10,0,0" Text="Create a wallet" HorizontalAlignment="Center"  FontSize="28" FontFamily="Microsoft YaHei Light" />
+            <Label  Content="Create a wallet" HorizontalAlignment="Center" Margin="5 0" FontSize="28" FontWeight="DemiBold" />
         </Border>
 
-        <TextBlock Margin="160,0,0,0" Text="Name" Width="608" FontFamily="Microsoft YaHei Light" Height="18" />
-        <TextBox Name="name" MaxLength="24" Width="450"  Padding="5,5,5,5" AutomationProperties.HelpText="Enter a wallet name." TextBlock.FontFamily="Microsoft YaHei Light" />
+        <Border Margin="200 05">
+            <Grid >
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
 
-        <TextBlock Margin="160,10,0,0" Text="Password" Width="606" FontFamily="Microsoft YaHei Light" Height="19" />
-        <PasswordBox Name="password" PasswordChar="*" Width="450" Padding="5,5,5,5" TextBlock.FontFamily="Microsoft YaHei Light" />
+                <Label Grid.Row="0"  Content="Name" Margin="5 0" FontSize="13" FontWeight="DemiBold"   />
+                <TextBox Grid.Row="1" Name="name" MaxLength="24"  Padding="5"  AutomationProperties.HelpText="Enter a wallet name." />
 
-        <TextBlock Margin="160,10,0,0" Text="Confirm password" Width="608" FontFamily="Microsoft YaHei Light" Height="18" />
-        <PasswordBox Name="repassword"  PasswordChar="*"  Width="450" Padding="5,5,5,5" TextBlock.FontFamily="Microsoft YaHei Light" />
+            </Grid>
+        </Border>
+        <Border Margin="200 05">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
 
-        <TextBlock Margin="160,10,0,0" Text="Passphrase (optional)" Width="606" FontFamily="Microsoft YaHei Light" Height="18" />
-        <TextBox Name="passphrase" Width="450" Padding="5,5,5,5" TextBlock.FontFamily="Microsoft YaHei Light" />
+                <Label Grid.Row="0" Margin="5 0" Content="Password" FontSize="13" FontWeight="DemiBold"  />
+                <PasswordBox Grid.Row="1" Name="password" PasswordChar="*" Padding="5"                                  AutomationProperties.HelpText="Enter password."  />
 
-        <Grid Width="420" Margin="0,20,0,0">
+            </Grid>
+        </Border>
 
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="6*" />
-            </Grid.ColumnDefinitions>
+        <Border Margin="200 05">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
 
-            <Button x:Name="cancelButton" Click="cancelButton_Click" Margin="-14,0,10,0" Grid.Column="0" Content="Cancel" Height="29" VerticalAlignment="Center" Padding="5,5,5,5" TextBlock.FontFamily="Microsoft YaHei Light" Background="White" Foreground="#FF53E253" BorderThickness="1,1,1,1" BorderBrush="#FF53E253" FontSize="14" RenderTransformOrigin="0.331,0.533">
-                <Button.Resources>
-                    <Style TargetType="Border">
-                        <Setter Property="CornerRadius" Value="5"/>
-                    </Style>
-                </Button.Resources>
-            </Button>
+                <Label Grid.Row="0" Margin="5 0" Content="Confirm password" FontSize="13" FontWeight="DemiBold" />
+                <PasswordBox Grid.Row="1" x:Name="repassword"  PasswordChar="*" Padding="5" />
 
-            <Button x:Name="createButton" Click="CreateButton_Click"  Width="370" HorizontalAlignment="Left" Grid.Column="1" Content="Create a new wallet" Padding="5,5,5,5" TextBlock.FontFamily="Microsoft YaHei Light" Background="#FF53E253" Foreground="White" BorderThickness="0,0,0,0" Margin="0,0,-15,0" FontSize="14">
-                <Button.Resources>
-                    <Style TargetType="Border">
-                        <Setter Property="CornerRadius" Value="5"/>
-                    </Style>
-                </Button.Resources>
-            </Button>
+            </Grid>
+        </Border>
 
-        </Grid>
+        <Border Margin="200 05">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
 
-    </StackPanel>-->
+                <Label Grid.Row="0" Margin="5 0" Content="Passphrase (optional)" FontSize="13" FontWeight="DemiBold" />
+                <TextBox Grid.Row="1" Name="passphrase" Padding="5" />
+
+            </Grid>
+        </Border>
+
+        <Border Margin="200 05">
+            <Grid>
+
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="2*" />
+                </Grid.ColumnDefinitions>
+
+                <Button x:Name="cancelButton" Click="CancelButton_Click" Grid.Column="0" Content="Cancel"  VerticalAlignment="Center" Padding="5" Margin="3" TextBlock.FontFamily="Microsoft YaHei Light" Background="White" Foreground="Green" BorderThickness="1,1,1,1" BorderBrush="Green" FontSize="14" RenderTransformOrigin="0.331,0.533">
+                    <Button.Resources>
+                        <Style TargetType="Border">
+                            <Setter Property="CornerRadius" Value="5"/>
+                        </Style>
+                    </Button.Resources>
+                </Button>
+
+                <Button x:Name="createButton" Click="CreateButton_Click" Grid.Column="1" Content="Create a new wallet" Padding="5" Margin="5" TextBlock.FontFamily="Microsoft YaHei Light" Background="Green" Foreground="White" BorderThickness="0" FontSize="14" >
+                    <Button.Resources>
+                        <Style TargetType="Border">
+                            <Setter Property="CornerRadius" Value="5"/>
+                        </Style>
+                    </Button.Resources>
+                </Button>
+
+            </Grid>
+        </Border>
+
+
+    </StackPanel>
+
 </Page>
