--- a/src/XelsDesktopWalletApp/Views/Pages/DashboardPage.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/DashboardPage.xaml
@@ -5,10 +5,10 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:XelsDesktopWalletApp.Views.Pages"
       mc:Ignorable="d" 
-      d:DesignHeight="550" d:DesignWidth="900"
-      Title="DashboardPage">
+      d:DesignHeight="700" d:DesignWidth="900"
+      Title="Dashboard">
 
-    <StackPanel Background="White" Margin="5">
+    <StackPanel x:Name="Dashboard" Background="White" Margin="5">
 
         <!--- upper grid -->
 
@@ -235,7 +235,7 @@
                                     <ColumnDefinition Width="*"/>
                                 </Grid.ColumnDefinitions>
 
-                                <Button Grid.Column="0" x:Name="receiveButton" Click="receiveButton_Click"  Content="RECEIVE"  Padding="2" Background="Green" FontFamily="Microsoft YaHei Light" BorderThickness="0,0,0,0" Foreground="White" FontWeight="Normal" >
+                                <Button Grid.Column="0" x:Name="receiveButton" Click="ReceiveButton_Click"  Content="RECEIVE"  Padding="2" Background="Green" FontFamily="Microsoft YaHei Light" BorderThickness="0,0,0,0" Foreground="White" FontWeight="Normal" >
                                     <Button.Resources>
                                         <Style TargetType="Border">
                                             <Setter Property="CornerRadius" Value="5"/>
@@ -243,7 +243,7 @@
                                     </Button.Resources>
                                 </Button>
 
-                                <Button Grid.Column="1" x:Name="sendButton" Click="sendButton_Click"  Content="SEND" Padding="2" Background="Green" FontFamily="Microsoft YaHei Light" BorderThickness="0,0,0,0" Foreground="White" FontWeight="Normal" Margin="10,0,0,0"  >
+                                <Button Grid.Column="1" x:Name="sendButton" Click="SendButton_Click"  Content="SEND" Padding="2" Background="Green" FontFamily="Microsoft YaHei Light" BorderThickness="0,0,0,0" Foreground="White" FontWeight="Normal" Margin="10,0,0,0"  >
                                     <Button.Resources>
                                         <Style TargetType="Border">
                                             <Setter Property="CornerRadius" Value="5"/>
