--- a/src/XelsDesktopWalletApp/Views/Pages/Modals/ReceiveUserControl.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/Modals/ReceiveUserControl.xaml
@@ -1,13 +1,15 @@
-﻿<Window x:Class="XelsDesktopWalletApp.Views.Receive"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:XelsDesktopWalletApp.Views"
-        mc:Ignorable="d"
-        Title="Receive" Height="550" Width="800">
+﻿<UserControl x:Class="XelsDesktopWalletApp.Views.Pages.Modals.ReceiveUserControl"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:XelsDesktopWalletApp.Views.Pages.Modals"
+             mc:Ignorable="d" 
+             d:DesignHeight="450" d:DesignWidth="800"
+             HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0" >
+    <StackPanel Background="White">
 
-    <StackPanel>
+        <Rectangle Fill="#989599" Opacity=".5" />
         
         <Grid>
 
@@ -24,7 +26,7 @@
                 <Label Content="Receive" HorizontalAlignment="Center" FontWeight="DemiBold"  FontSize="20"
                     RenderTransformOrigin="0.515,-0.184" />
             </Border>
-            
+
             <!-- buttons   -->
             <Border Grid.Row="1">
                 <Grid Margin="100 5">
@@ -56,7 +58,7 @@
                             </Button.Resources>
                         </Button>
                     </Border>
-                    
+
                     <Border Grid.Column="2" Margin="2 0">
                         <Button Content="BELS" Click="BelsButton_Click" 
                         RenderTransformOrigin="2.423,0.568"  Background="Green"                        
@@ -78,17 +80,15 @@
             </Border>
 
             <Border Grid.Row="3" Margin="100 2">
-                
+
                 <Button x:Name="restoreButton" Click="restoreButton_Click" Content="OK"
                         Background="Green" 
-                        Foreground="White" >                   
+                        Foreground="White" >
                 </Button>
             </Border>
-</Grid>
+        </Grid>
 
-      
+
 
     </StackPanel>
-
-
-</Window>
+</UserControl>
