--- a/src/XelsDesktopWalletApp/Views/Pages/RestoreWalletPage.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/RestoreWalletPage.xaml
@@ -3,12 +3,164 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+       xmlns:sys="clr-namespace:System;assembly=mscorlib"
       xmlns:local="clr-namespace:XelsDesktopWalletApp.Views.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="RestoreWalletPage">
 
-    <Grid>
-        <Label> restore wallet </Label>
-    </Grid>
+    <StackPanel Background="White">
+
+
+        <Border Margin="20 15">
+            <Label  Content="Restore a wallet" 
+                       HorizontalAlignment="Center"  
+                       FontSize="20" FontWeight="Bold"
+                    FontFamily="Microsoft YaHei Light" />
+        </Border>
+
+        <StackPanel>
+
+            <!---  wallet name  -->
+            <Border Margin="200 0">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+
+                    <Label Grid.Row="0" Content="Name" Padding="1 " Margin="5" FontSize="13" FontWeight="DemiBold" />
+
+                    <TextBox Grid.Row="1" x:Name="name"  
+                     Text="Enter a wallet name." 
+                     Padding="5 " Margin="0 5"
+                     AutomationProperties.HelpText="Enter a 
+                     wallet name." 
+                     TextBlock.FontFamily="Microsoft YaHei Light"
+                     BorderBrush="#FFAAAAAA" />
+                </Grid>
+            </Border>
+
+            <!--- date picker -->
+            <Border Margin="200 0">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+
+                    <Label  Grid.Row="0"
+                       Content="Earliest Possible Creation Date" 
+                        FontSize="13" FontWeight="DemiBold"
+                        Padding="1 " Margin="5" />
+
+                    <DatePicker Grid.Row="1"  x:Name="creationDate" 
+                       SelectedDate = "{x:Static sys:DateTime.Now}"
+                                 Padding="5 " Margin="0 5" />
+                </Grid>
+            </Border>
+
+            <!--- mnemonic -->
+            <Border Margin="200 0">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+
+                    <Label Grid.Row="0" Margin="0 5" Content ="Secret Words" 
+                      FontSize="13" FontWeight="DemiBold" Padding="1 " />
+                    <TextBox Grid.Row="1" x:Name="mnemonic" Margin="0 5" 
+                     Padding="5 " Text="Enter your secret 
+                     words."   BorderBrush="#FFAAAAAA" />
+
+
+                </Grid>
+            </Border>
+
+            <!--- password -->
+            <Border Margin="200 0">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+
+                    <Label Grid.Row="0" Margin="0 5" Content="Password" FontSize="13" FontWeight="DemiBold" Padding="1 " />
+                    <PasswordBox Grid.Row="1" x:Name="password" Margin="0 5 " 
+                     Padding="5" 
+                     BorderBrush="#FFAAAAAA" />
+
+                </Grid>
+            </Border>
+
+            <!--- pass phrase -->
+            <Border Margin="200 0">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+
+
+                    <TextBlock Grid.Row="0" Margin="0 5" Text="Passphrase (optional)" FontSize="13" FontWeight="DemiBold" Padding="1" />
+                    <TextBox Grid.Row="1" x:Name="passphrase" 
+                             Padding="5 "  Margin="0 5"
+                             Text="Enter an optional Passphrase." BorderBrush="#FFAAAAAA" />
+                </Grid>
+            </Border>
+
+            <!--- button -->
+            <Border Margin="200 10">
+
+                <Grid >
+
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="2*" />
+                    </Grid.ColumnDefinitions>
+
+                    <Button Grid.Column="0" 
+                            x:Name="cancelButton" 
+                        Click="CancelButton_Click" 
+                       Margin="0 0 5 0"
+                        Content="Cancel" 
+                        VerticalAlignment="Center" 
+                        Padding="5" 
+                        TextBlock.FontFamily="Microsoft YaHei 
+                        Light" Background="White" 
+                        Foreground="Green" 
+                        BorderThickness="1,1,1,1" 
+                        BorderBrush="Green" FontSize="14">
+                        <Button.Resources>
+                            <Style TargetType="Border">
+                                <Setter Property="CornerRadius" 
+                                    Value="5"/>
+                            </Style>
+                        </Button.Resources>
+                    </Button>
+
+                    <Button Grid.Column="1" x:Name="restoreButton" 
+                        Click="RestoreButton_Click" 
+                            Margin="5 0 0 0"
+                        Content="Restore" Padding="5" 
+                        TextBlock.FontFamily="Microsoft YaHei 
+                        Light" Background="Green"
+                        Foreground="White" 
+                        BorderThickness="0,0,0,0"                         
+                        FontSize="14">
+                        <Button.Resources>
+                            <Style TargetType="Border">
+                                <Setter Property="CornerRadius" Value="5"/>
+                            </Style>
+                        </Button.Resources>
+                    </Button>
+
+                </Grid>
+
+            </Border>
+
+        </StackPanel>
+
+    </StackPanel>
 </Page>
