--- a/src/XelsDesktopWalletApp/Views/History.xaml
+++ b/src/XelsDesktopWalletApp/Views/History.xaml
@@ -119,21 +119,158 @@
 
             </Grid>
             <Grid Height="334">
-                <ListView Margin="10" x:Name="HistoryListBinding" >
+                <ListView Margin="10" x:Name="HistoryListBinding" VerticalContentAlignment="Top"  
+                          ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.CanContentScroll="False">
                     <ListView.View>
                         <GridView>
-                            <GridViewColumn Header="Confirmation in block" Width="200" 
-                                            DisplayMemberBinding="{Binding Path=transactionTypeName}"  />
-                            <GridViewColumn Header="Type" Width="150"
-                                            DisplayMemberBinding="{Binding Path=transactionType}" />
-                            <GridViewColumn Header="Amount" Width="150" 
-                                            DisplayMemberBinding="{Binding Path=transactionFinalAmount}"  />
-                            <GridViewColumn Header="Time stamp" Width="150" 
-                                            DisplayMemberBinding="{Binding Path=transactionTimestamp}"  />
+                            <GridViewColumn Width="200" 
+                                            DisplayMemberBinding="{Binding Path=Type}"  />
+
+                            <GridViewColumn  Width="200" 
+                                            DisplayMemberBinding="{Binding Path=Amount}"  />
+                            <GridViewColumn  Width="200" 
+                                            DisplayMemberBinding="{Binding Path=Timestamp}"  />
+                            <GridViewColumn>
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <Button Name="DetailsButton" Content="Details" Click="DetailsButton_Click" Background="Green" Padding="5" Margin="10 0" />
+                                    </DataTemplate>
+
+                                </GridViewColumn.CellTemplate>
+
+                            </GridViewColumn>
                         </GridView>
                     </ListView.View>
+                    <ListView.ItemContainerStyle>
+                        <Style TargetType="ListViewItem">
+                            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                            <Setter Property="Padding" Value="0"/>
+                            <Setter Property="Margin" Value="0"/>
+                            <Setter Property="BorderThickness" Value="0"/>
+                        </Style>
+                    </ListView.ItemContainerStyle>
                 </ListView>
+
+                <Popup Name="DetailsPopup" Placement="Center"  AllowsTransparency="False">
+                    <Grid Width="800"  Height="700">
+                        <Rectangle Width="800" Height="700" Fill="WhiteSmoke"  />
+                        <Button Click="HidePopup_Click" Margin="20" Height="20" Width="20" 
+                                VerticalAlignment="Top" HorizontalAlignment="Right" Content="X" >
+
+                            <Button.Resources>
+                                <Style TargetType="{x:Type Border}">
+                                    <Setter Property="CornerRadius" Value="50"/>
+                                </Style>
+                            </Button.Resources>
+                        </Button>
+
+
+
+                        <Label Content="Transaction Details" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="30" 
+                               FontFamily="Microsoft YaHei" Margin="50,30,0,0" />
+
+                        <Grid Name="AboutGrid" Height="500" Background="White" Margin="50" Width="784" HorizontalAlignment="Left">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="211*"></ColumnDefinition>
+                                <ColumnDefinition Width="573*"></ColumnDefinition>
+                            </Grid.ColumnDefinitions>
+                            
+                            <StackPanel Orientation="Vertical" Margin="10,64,0,66"  Grid.Column="0" >
+                                <Label Content="Type:" Height="30" Width="178" Foreground="#FF615858"  HorizontalAlignment="Right"
+                                FontFamily="Microsoft YaHei Light" FontSize="14" Padding="4"/>
+                                <Label Content="Total Amount:" Height="30" Width="178" Foreground="#FF615858"  HorizontalAlignment="Right"
+                                FontFamily="Microsoft YaHei Light" FontSize="14" Padding="4"/>
+                                <Label Content="Amount Sent:" Height="30" Width="178" Foreground="#FF615858"  HorizontalAlignment="Right"
+                                FontFamily="Microsoft YaHei Light" FontSize="14" Padding="4"/>
+                                <Label Content="Fee:" Height="30" Width="178" Foreground="#FF615858" HorizontalAlignment="Right"
+                                FontFamily="Microsoft YaHei Light" FontSize="14" Padding="4"/>
+                                <Label Content="Date:" Height="30" Width="178" Foreground="#FF615858" HorizontalAlignment="Right"
+                                FontFamily="Microsoft YaHei Light" FontSize="14" Padding="4"/>
+                                <Label Content="Block:" Height="30" Width="178" Foreground="#FF615858" HorizontalAlignment="Right"
+                                FontFamily="Microsoft YaHei Light" FontSize="14" Padding="4"/>
+                                <Label Content="Confirmations:" Height="30" Width="178" Foreground="#FF615858" HorizontalAlignment="Right"
+                                FontFamily="Microsoft YaHei Light" FontSize="14" Padding="4"/>
+                                <Label Content="Transaction ID:" Height="30" Width="178" Foreground="#FF615858" HorizontalAlignment="Right"
+                                FontFamily="Microsoft YaHei Light" FontSize="14" Padding="4"/>
+
+                            </StackPanel>
+                            <StackPanel Orientation="Vertical" Margin="0,64,0,66"  Grid.Column="1" HorizontalAlignment="Left" Width="559" >
+                                <TextBlock x:Name="TypeTxt" Text="TypeText"
+                                     TextWrapping="Wrap" Width="555" Padding="4" 
+                                     FontFamily="Microsoft YaHei" FontSize="14" Foreground="ForestGreen" 
+                                     TextAlignment="Left" Height="30">
+                                </TextBlock>
+                                <TextBlock x:Name="TotalAmountTxt" Text="TotalAmount"
+                                     TextWrapping="Wrap" Width="555" Padding="4" 
+                                     FontFamily="Microsoft YaHei Light" FontSize="14" Foreground="#FF615858" 
+                                     TextAlignment="Left" Height="30">
+                                </TextBlock>
+                                <TextBlock x:Name="AmountSentTxt"  Text="AmountSent"
+                                     TextWrapping="Wrap" Width="555" Padding="4" 
+                                     FontFamily="Microsoft YaHei Light" FontSize="14" Foreground="#FF615858" 
+                                     TextAlignment="Left" Height="30">
+                                </TextBlock>
+                                <TextBlock x:Name="FeeTxt"  Text="Fee"
+                                     TextWrapping="Wrap" Width="555" Padding="4" 
+                                     FontFamily="Microsoft YaHei Light" FontSize="14" Foreground="#FF615858" 
+                                     TextAlignment="Left" Height="30">
+                                </TextBlock>
+                                <TextBlock x:Name="DateTxt"  Text="Date"
+                                     TextWrapping="Wrap" Width="555" Padding="4" 
+                                     FontFamily="Microsoft YaHei Light" FontSize="14" Foreground="#FF615858" 
+                                     TextAlignment="Left" Height="30">
+                                </TextBlock>
+                                <TextBlock x:Name="BlockTxt"  Text="Block"
+                                     TextWrapping="Wrap" Width="555" Padding="4" 
+                                     FontFamily="Microsoft YaHei Light" FontSize="14" Foreground="#FF615858" 
+                                     TextAlignment="Left" Height="30">
+                                </TextBlock>
+                                <TextBlock x:Name="ConfirmationsTxt"  Text="Confirmations"
+                                     TextWrapping="Wrap" Width="555" Padding="4" 
+                                     FontFamily="Microsoft YaHei Light" FontSize="14" Foreground="ForestGreen" 
+                                     TextAlignment="Left" Height="30">
+                                </TextBlock>
+                                <TextBlock x:Name="TransactionIDTxt"  Text="TransactionID"
+                                     TextWrapping="Wrap" Width="555" Padding="4" 
+                                     FontFamily="Microsoft YaHei Light" FontSize="14" Foreground="ForestGreen" 
+                                     TextAlignment="Left" Height="30">
+                                </TextBlock>
+                                <TextBlock x:Name="TransactionIDCopy"  TextAlignment="Left" Height="30" Width="555">
+                                    <Button  x:Name="CopyButton" Click="Copy_Click" Padding="2" 
+                                Background="White" BorderThickness="1,1,1,1" Foreground="Gray" 
+                                Content="Copy"
+                                 HorizontalAlignment="Left" VerticalAlignment="Top" 
+                                Height="25" Width="50" FontFamily="Microsoft YaHei Light" BorderBrush="Gray" >
+                                    <Button.Resources>
+                                        <Style TargetType="{x:Type Border}">
+                                            <Setter Property="CornerRadius" Value="5"/>
+                                        </Style>
+                                    </Button.Resources>
+                                </Button>
+                                </TextBlock>
+
+                            </StackPanel>
+
+                            <StackPanel Orientation="Vertical" Margin="50,400,0,66"  Grid.Column="0" Grid.ColumnSpan="2">
+                                <Button  x:Name="OkButton" Click="Ok_Click" Padding="2" 
+                                Background="White" BorderThickness="1,1,1,1" Foreground="#FF53E253" 
+                                Content="OK"
+                                 HorizontalAlignment="Left" VerticalAlignment="Top" 
+                                Height="30" Width="300" FontFamily="Microsoft YaHei Light" BorderBrush="#FF53E253" >
+                                    <Button.Resources>
+                                        <Style TargetType="{x:Type Border}">
+                                            <Setter Property="CornerRadius" Value="5"/>
+                                        </Style>
+                                    </Button.Resources>
+                                </Button>
+                            </StackPanel>
+                        </Grid>
+                        
+                    </Grid>
+                </Popup>
+
             </Grid>
+            
 
         </StackPanel>
     </Border>
