--- a/src/XelsDesktopWalletApp/Views/Pages/Modals/ReceiveUserControl.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/Modals/ReceiveUserControl.xaml
@@ -5,11 +5,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:XelsDesktopWalletApp.Views.Pages.Modals"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
-             HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0" >
+              d:DesignHeight="700" d:DesignWidth="900"
+             HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0" Initialized="UserControl_Initialized" >
     <StackPanel Background="White">
 
-        <Rectangle Fill="#989599" Opacity=".5" />
+        <Rectangle Fill="Red" Opacity=".5" MouseDown="Rectangle_MouseDown" />
         
         <Grid>
 
@@ -38,7 +38,7 @@
 
                     <Border Grid.Column="0" Margin="2 0">
                         <Button x:Name="XelsButton" Content="XELS" Click="XelsButton_Click"    VerticalAlignment="Top" 
-                        Background="Green" RenderTransformOrigin="0.174,0.571">
+                        Background="Green" RenderTransformOrigin="0.174,0.571" >
                             <Button.Resources>
                                 <Style TargetType="{x:Type Border}">
                                     <Setter Property="CornerRadius" Value="5"/>
