--- a/src/XelsDesktopWalletApp/Views/Pages/SendPages/SidechainPage.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/SendPages/SidechainPage.xaml
@@ -19,7 +19,7 @@
                 <RowDefinition Height="*" />
                 <RowDefinition Height="*" />
                 <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
+                <!--<RowDefinition Height="*" />-->
             </Grid.RowDefinitions>
 
 
@@ -114,16 +114,29 @@
 
 
 
-            <Border Grid.Row="4" CornerRadius="3" Background="WhiteSmoke" Margin=" 0 5" >
-                <TextBlock HorizontalAlignment="Center" Text="An aditional amount of 0.00000001 xlc will be used to send this transaction." FontSize="15" FontWeight="DemiBold"  Margin=" 0 15" />
+            <Border Grid.Row="4" Margin=" 0 5"  >
+
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Border Grid.Column="0" CornerRadius="3" Background="WhiteSmoke" Margin=" 05 5" >
+                    <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="An aditional amount of 0.00000001 xlc will be used to send this transaction." FontSize="15" FontWeight="DemiBold"  Margin=" 0 15" />
+                    </Border>
+
+                    <Border Grid.Column="1" CornerRadius="3" Background="WhiteSmoke" Margin=" 05 5" >
+                        <TextBlock  HorizontalAlignment="Center" TextWrapping="Wrap" Text="Please note that sending from a sidechain to the mainchain requires 240 confirmations." FontSize="15" FontWeight="DemiBold"  Margin=" 0 15" />
+                    </Border>
+                </Grid>
+                
             </Border>
-            <Border Grid.Row="5" CornerRadius="3" Background="WhiteSmoke" Margin=" 0 5" >
-                <TextBlock  HorizontalAlignment="Center" Text="Please note that sending from a sidechain to the mainchain requires 240 confirmations." FontSize="15" FontWeight="DemiBold"  Margin=" 0 15" />
-            </Border>
+            
 
 
             <!--password-->
-            <Border Grid.Row="6" >
+            <Border Grid.Row="5" >
                 <Grid>
 
                     <Grid.RowDefinitions>
@@ -137,7 +150,7 @@
             </Border>
 
             <!---   button -->
-            <Border Grid.Row="7" Margin="0 10">
+            <Border Grid.Row="6" Margin="0 10">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width=" *"/>
