Address book & Advanced: Created new pages. Converted into page from window

--- a/src/XelsDesktopWalletApp/Views/Pages/DashboardPage.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/DashboardPage.xaml
@@ -8,7 +8,7 @@
       d:DesignHeight="550" d:DesignWidth="900"
       Title="DashboardPage">
 
-    <StackPanel Background="White" Margin="5">DetailsButton_Click
+    <StackPanel Background="White" Margin="5">
 
         <!--- upper grid -->
 
